Fixes border visibility

--- a/src/components/Notification/styles.module.scss
+++ b/src/components/Notification/styles.module.scss
@@ -14,7 +14,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    border-radius: 8px 0 0 8px;
+    border-radius: 6px 0 0 6px;
     text-align: center;
     line-height: 50px;
     font-size: 1.5rem
